# rbac_infra

./: .gitignore  LICENSE  MANIFEST.in  Makefile  README.md  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: ci.yml  publish.yml
rbac_infra/adapter/: admin.py  apps.py  backend.py  models.py  permission.py  repository.py
rbac_infra/adapter/migrations/: 0001_initial.py
rbac_infra/caching/: interfaces.py  memory_cache.py
rbac_infra/core/: entities.py  interfaces.py  service.py
tests/: conftest.py  settings.py
tests/adapter/: test_adapter.py  test_adapter_backends.py
tests/core/: test_edge_case.py  test_policies.py  test_rbac.py
tests/utils/: fakes.py
