[build-system]
requires = ["setuptools>=65", "wheel", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"


[project]
name = "rbac_infra"
description = "Secure, DIP-based reusable RBAC infrastructure"
license = {text = "MIT"}
authors = [
    {name = "Offside Integrated Technology (Somtochukwu Emmanuel)", email = "offsideint@gmail.com"}
]
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.9"

dynamic = ["version"]

dependencies = [
    "redis",
    "python-dotenv"
]

[project.optional-dependencies]
dev = [
    "django",
    "pytest",
    "pytest-django",
    "pytest-cov",
    "faker",
    "redis",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["rbac_infra*"]
exclude = ["tests*"]

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
rbac_infra = ["migrations/*.py"]

[tool.setuptools_scm]
version_scheme = "no-guess-dev"
local_scheme = "no-local-version"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "tests.settings"
python_files = ["tests.py", "test_*.py"]